# Mailwarden

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.yml  mailwarden.py  pyproject.toml  requirements.txt  update.sh
scripts/: analyze_emails.py  analyze_latest.py  test_connectivity.py  test_draft_generation.py  test_draft_simple.py  test_imap.py
src/mailwarden/: __init__.py  cli.py  config.py  decision_engine.py  dns_verifier.py  email_parser.py  executor.py  imap_client.py  llm_client.py  reporter.py  rules_engine.py  spam_engine.py  storage.py  structured_logger.py
src/mailwarden/web/: __init__.py  app.py
src/mailwarden/web/static/: app.js  index.html  style.css
tests/: __init__.py  test_config.py  test_dns_verifier.py  test_email_parser.py  test_rules_engine.py  test_spam_engine.py
